Mudança de layout

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <div class="banner">
+    <img src="assets/banner-site.jpg" alt="">
     </div>
     <section>
         <div class="body-contents">
