--- a/sobre.html
+++ b/sobre.html
@@ -27,6 +27,7 @@
 
 <body>
     <div class="banner">
+    <img src="assets/banner-site.jpg" alt="">
     </div>
 
     <div class="sobre-container1">
