--- a/sobre.html
+++ b/sobre.html
@@ -7,17 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amatos Developer Service</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/03f7280425.js" crossorigin="anonymous"></script>
+<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+<link rel="manifest" href="/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
 </head>
 
 <header>
     <div class="header-contents">
         <div class="topbar">
-            <img src="Assets/logo.png" alt="MEU LOGO">
+            <img src="Assets/Logo2.png" alt="MEU LOGO">
         </div>
         <div class="navbar">
             <ul>
                 <a href="index.html"><li>Início</li></a>
-                <a href="servicos.html"><li>Serviços / Produtos</li></a>
+                <a href="servicos.html"><li>Serviços</li></a>
                 <a href="sobre.html"><li>Sobre</li></a>
                 <a href="contato.html"><li>Contato</li></a>
             </ul>
@@ -27,7 +46,6 @@
 
 <body>
     <div class="banner">
-    <img src="assets/banner-site.jpg" alt="">
     </div>
 
     <div class="sobre-container1">
@@ -77,7 +95,48 @@
 </body>
 
 <footer>
-    <h4>&copy;2023, Amatos Developer Services - all rights reserved.</h4>
+<div class="footer-contents">
+    <div class="image-logo">
+        <img src="Assets/Logo2-mono.png" alt="">
+    </div>
+    <div class="footer-text">
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque delectus aliquam quisquam aut. Est nihil incidunt esse sapiente?</p>
+    </div>
+</div>
+
+    <div class="footer-nav">
+        <ul>
+            <a href="index.html"><li>Início</li></a>
+            <a href="servicos.html"><li>Serviços</li></a>
+            <a href="sobre.html"><li>Sobre</li></a>
+            <a href="contato.html"><li>Contato</li></a>
+        </ul>
+    </div>
+</div>
+
+<div class="redes-sociais">
+    <i class="fa-brands fa-linkedin-in fa-2xl"></i>
+    <i class="fa-brands fa-instagram fa-2xl"></i>
+    <i class="fa-brands fa-github fa-2xl"></i>
+    <i class="fa-brands fa-whatsapp fa-2xl"></i>
+</div>
+
+    <form class="newsletter-form">
+        <label for="email">Receba nossas Newsletters!</label>
+        <input type="text" name="email" id="email" placeholder="Digite seu e-mail">
+        <button>Quero Receber</button>
+    </form>
+    <div class="side">
+            <ul>
+            <a href="#"><li>Institucional</li></a>
+            <a href="#"><li>F.Q.A</li></a>
+            <a href="#"><li>Termos de Serviços</li></a>
+            <a href="#"><li>Suporte</li></a>
+        </ul>
+    </div>
 </footer>
+<div class="copy">
+    &copy; 2023, Amatos Developer Services - Todos os direitos reservados.
+</div>
 
 </html>
