Add Responsividade Mobile

--- a/sobre.html
+++ b/sobre.html
@@ -66,7 +66,7 @@
             <article class="section-sobre-nos">
                 <div class="body-sobre-nos">
                     <div class="title">
-                        <h1>Porque escolher a Amatos Developer Services ?</h1>
+                        <h1>Porque escolher a Amatos Developer Services?</h1>
                     </div>
                     <div class="text-sobre-nos">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod quis ea voluptatem cupiditate accusantium esse maxime. Cumque eius voluptatem repellendus blanditiis, accusantium dolores, fugiat nulla eligendi exercitationem voluptatum explicabo?
@@ -111,14 +111,22 @@
             <a href="sobre.html"><li>Sobre</li></a>
             <a href="contato.html"><li>Contato</li></a>
         </ul>
-    </div>
+</div>
 </div>
 
 <div class="redes-sociais">
-    <i class="fa-brands fa-linkedin-in fa-2xl"></i>
-    <i class="fa-brands fa-instagram fa-2xl"></i>
-    <i class="fa-brands fa-github fa-2xl"></i>
-    <i class="fa-brands fa-whatsapp fa-2xl"></i>
+    <div class="linkedin">
+        <a href="https://www.linkedin.com/in/alcides-matos-3158231b4/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+    </div>
+    <div class="instagram">
+        <a href="https://www.instagram.com/amatos.dev/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+    </div>
+    <div class="github">
+        <a href="https://github.com/proswamp"><i class="fa-brands fa-github fa-2xl"></i></a>
+    </div>
+    <div class="whatsapp">
+        <a href=" https://wa.me/5511969922382"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+    </div>
 </div>
 
     <form class="newsletter-form">
@@ -128,11 +136,11 @@
     </form>
     <div class="side">
             <ul>
-            <a href="#"><li>Institucional</li></a>
-            <a href="#"><li>F.Q.A</li></a>
-            <a href="#"><li>Termos de Serviços</li></a>
-            <a href="#"><li>Suporte</li></a>
-        </ul>
+                <a href="#"><li>Blog</li></a>
+                <a href="#"><li>FAQ</li></a>
+                <a href="#"><li>Política de Privacidade</li></a>
+                <a href="#"><li>Trabalhe Conosco</li></a>
+            </ul>
     </div>
 </footer>
 <div class="copy">
