--- a/contato.html
+++ b/contato.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/03f7280425.js" crossorigin="anonymous"></script>
 
-<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
@@ -54,24 +54,17 @@
                 <h1>Contate-nos</h1>
                 <h5>Entre em contato conosco e inicie agora mesmo seu projeto:</h5>
             </div>
-
-<form action=”/formulario-contato” method=”post”>
-    <div>
-        <label for="nome">Nome:</label>
-        <input type="texto" id="nome" name="nome_usuario">
-    </div>
-    <div>
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email_usuario">
-    </div>
-    <div>
-        <label for="texto">Mensagem:</label>
-        <textarea id="texto" name="texto_usuario"></textarea>
-    </div>
-    <div class="button">
-        <button type="submit">Enviar</button>
-    </div>
-</form>
+        </div>
+            <form action="enviar.php" method="post">
+                <label for="nome">Nome:</label>
+                <input type="texto" id="nome" name="nome_usuario">
+                <label for="email">E-mail:</label>
+                <input type="email" id="email" name="email_usuario">
+                <label for="texto">Mensagem:</label>
+                <textarea id="texto" name="texto_usuario"></textarea>
+                <div class="button">
+                <button type="submit">Enviar</button>
+            </form>
     </main> 
 </body>
 
@@ -96,10 +89,18 @@
 </div>
 
 <div class="redes-sociais">
-    <i class="fa-brands fa-linkedin-in fa-2xl"></i>
-    <i class="fa-brands fa-instagram fa-2xl"></i>
-    <i class="fa-brands fa-github fa-2xl"></i>
-    <i class="fa-brands fa-whatsapp fa-2xl"></i>
+    <div class="linkedin">
+        <a href="https://www.linkedin.com/in/alcides-matos-3158231b4/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+    </div>
+    <div class="instagram">
+        <a href="https://www.instagram.com/amatos.dev/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+    </div>
+    <div class="github">
+        <a href="https://github.com/proswamp"><i class="fa-brands fa-github fa-2xl"></i></a>
+    </div>
+    <div class="whatsapp">
+        <a href=" https://wa.me/5511969922382"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+    </div>
 </div>
 
     <form class="newsletter-form">
@@ -109,11 +110,11 @@
     </form>
     <div class="side">
             <ul>
-            <a href="#"><li>Institucional</li></a>
-            <a href="#"><li>F.Q.A</li></a>
-            <a href="#"><li>Termos de Serviços</li></a>
-            <a href="#"><li>Suporte</li></a>
-        </ul>
+                <a href="#"><li>Blog</li></a>
+                <a href="#"><li>FAQ</li></a>
+                <a href="#"><li>Política de Privacidade</li></a>
+                <a href="#"><li>Trabalhe Conosco</li></a>
+            </ul>
     </div>
 </footer>
 <div class="copy">
