--- a/servicos.html
+++ b/servicos.html
@@ -50,7 +50,7 @@
     <section>
         <div class="body-contents">
             <div class="title">
-                <h1>Serviços e Produtos</h1>
+                <h1>Serviços</h1>
                 <h5>Confira quais são os serviços que oferecemos:</h5>
             </div>
             <div class="servicos-superior">
@@ -130,10 +130,18 @@
 </div>
 
 <div class="redes-sociais">
-    <i class="fa-brands fa-linkedin-in fa-2xl"></i>
-    <i class="fa-brands fa-instagram fa-2xl"></i>
-    <i class="fa-brands fa-github fa-2xl"></i>
-    <i class="fa-brands fa-whatsapp fa-2xl"></i>
+    <div class="linkedin">
+        <a href="https://www.linkedin.com/in/alcides-matos-3158231b4/"><i class="fa-brands fa-linkedin-in fa-2xl"></i></a>
+    </div>
+    <div class="instagram">
+        <a href="https://www.instagram.com/amatos.dev/"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+    </div>
+    <div class="github">
+        <a href="https://github.com/proswamp"><i class="fa-brands fa-github fa-2xl"></i></a>
+    </div>
+    <div class="whatsapp">
+        <a href=" https://wa.me/5511969922382"><i class="fa-brands fa-whatsapp fa-2xl"></i></a>
+    </div>
 </div>
 
     <form class="newsletter-form">
@@ -143,11 +151,11 @@
     </form>
     <div class="side">
             <ul>
-            <a href="#"><li>Institucional</li></a>
-            <a href="#"><li>F.Q.A</li></a>
-            <a href="#"><li>Termos de Serviços</li></a>
-            <a href="#"><li>Suporte</li></a>
-        </ul>
+                <a href="#"><li>Blog</li></a>
+                <a href="#"><li>FAQ</li></a>
+                <a href="#"><li>Política de Privacidade</li></a>
+                <a href="#"><li>Trabalhe Conosco</li></a>
+            </ul>
     </div>
 </footer>
 <div class="copy">
